# MicroOcppSimulator

./: .dockerignore  .gitignore  .gitmodules  196.js  340.js  CMakeLists.txt  CNAME  Dockerfile  README.md  index.html  main.c  main.cpp  mo_simulator_wasm.wasm  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_docker.yml  build_ubuntu.yml  build_wasm.yml
build-webapp/: build_webapp.ps1  build_webapp.sh  install_webassembly.sh
mo_store/: README.md
mongoose/: mongoose.c  mongoose.h
public/: index.html
src/: api.cpp  api.h  evse.cpp  evse.h  main.cpp  net_mongoose.cpp  net_mongoose.h  net_wasm.cpp  net_wasm.h  webserver.cpp  webserver.h  ws_adapter.cpp  ws_adapter.h
